Plugin Name	: Email Subscribers
Plugin URI	: http://www.gopiplus.com/work/2014/05/02/email-subscribers-wordpress-plugin/
Author		: Gopi Ramasamy
Author URI	: http://www.gopiplus.com
License		: GPLv2 or later
License URI	: http://www.gnu.org/licenses/gpl-2.0.html
 
********************************Version 1.0************************************************************

First version.

Email subscribers plugin has options to send newsletters to subscribers. It has a separate page with HTML editor to create a HTML newsletter. 
Also have options to send notification email to subscribers when new posts are published to your blog. Separate page available to include and 
exclude categories to send notifications. Using plugin Import and Export options admins can easily import registered users and commenters to 
subscriptions list.

********************************Version 1.1************************************************************

1. Subscriber admin page, Check ALL & Uncheck All bug fixed.
2. Updated Help documents.