@@ -25,17 +25,17 @@ class es_cls_widget
 		$es = $es . '<div class="es_msg"><span id="es_msg_pg"></span></div>';
 		if( $es_name == "YES" ) 
 		{
-			$es = $es . '<div class="es_lablebox">Name</div>';
+			$es = $es . '<div class="es_lablebox">'.__('Name', ES_TDOMAIN).'</div>';
 			$es = $es . '<div class="es_textbox">';
 				$es = $es . '<input class="es_textbox_class" name="es_txt_name_pg" id="es_txt_name_pg" value="" maxlength="225" type="text">';
 			$es = $es . '</div>';
 		}
-		$es = $es . '<div class="es_lablebox">Email *</div>';
+		$es = $es . '<div class="es_lablebox">'.__('Email *', ES_TDOMAIN).'</div>';
 		$es = $es . '<div class="es_textbox">';
 			$es = $es . '<input class="es_textbox_class" name="es_txt_email_pg" id="es_txt_email_pg" onkeypress="if(event.keyCode==13) es_submit_pages('.$url.')" value="" maxlength="225" type="text">';
 		$es = $es . '</div>';
 		$es = $es . '<div class="es_button">';
-			$es = $es . '<input class="es_textbox_button" name="es_txt_button_pg" id="es_txt_button_pg" onClick="return es_submit_pages('.$url.')" value="Subscribe" type="button">';
+			$es = $es . '<input class="es_textbox_button" name="es_txt_button_pg" id="es_txt_button_pg" onClick="return es_submit_pages('.$url.')" value="'.__('Subscribe', ES_TDOMAIN).'" type="button">';
 		$es = $es . '</div>';
 		if( $es_name != "YES" ) 
 		{
