@@ -181,7 +181,7 @@ if (isset($_POST['frm_es_display']) && $_POST['frm_es_display'] == 'yes')
             <th class="check-column" scope="col">
 			<input type="checkbox" name="es_checkall" id="es_checkall" onClick="_es_checkall('frm_es_display', 'chk_delete[]', this.checked);" /></th>
             <th scope="col"><?php _e('Sno', ES_TDOMAIN); ?></th>
-			<th scope="col"><?php _e('Email', ES_TDOMAIN); ?></th>
+			<th scope="col"><?php _e('Email address', ES_TDOMAIN); ?></th>
 			<th scope="col"><?php _e('Name', ES_TDOMAIN); ?></th>
 			<th scope="col"><?php _e('Status', ES_TDOMAIN); ?></th>
 			<th scope="col"><?php _e('Group', ES_TDOMAIN); ?></th>
